--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
+    "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
